@@ -228,6 +228,12 @@ Bug Fixes
 
 * SOLR-3009: hitGrouped.vm isn't shipped with 3.x (ehatcher, janhoy)
 
+* SOLR-3204: The packaged pre-release artifact of Commons CSV used the original
+  package name (org.apache.commons.csv). This created a compatibility issue as
+  the Apache Commons team works toward an official release of Commons CSV.
+  JARJAR (http://code.google.com/p/jarjar/) was used to change the package name
+  to org.apache.solr.internal.csv.  (Uwe Schindler, Emmanuel Bourg)
+
 Other Changes
 ----------------------
 * SOLR-2922: Upgrade commons-io and commons-lang to 2.1 and 2.6, respectively. (koji)
